--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lppms",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3100",
+  "proxy": "http://localhost:3001",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,13 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.17.0",
     "@ant-design/icons": "^5.2.6",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.12.1",
     "axios": "^1.6.2",
-    "next": "14.0.3",
+    "next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.1"
